feat: jdk17 配置修改